--- a/html/PBWCA/PBWCA010000_year.html
+++ b/html/PBWCA/PBWCA010000_year.html
@@ -346,18 +346,17 @@
 							<div class="group-content">
 								<div class="inp-group py24 gap16">
 									<div class="inp inp-medium inp-combi">
-										<label style="flex:0">
-											<input type="radio" name="rad005">
+										<label style="flex:none;">
+											<input type="radio" name="rad001">
+											<span class="label-title">매년 같은 날</span>
 										</label>
-										<div class="form">
-											<div class="label"></div>
-											<div class="input-wrap input-placeholder">
-												<div class="visible-placeholder">매년 같은 날</div>
-												<button type="button" class="text-button ac" data-placeholder="12월 7일"></button>
-												<div class="visible-placeholder">에</div>
+										<!-- 종료일 지정 체크 시 활성화 -->
+										<div class="form" style="flex:none;width:173px;">
+											<div class="input-wrap input-datepicker input-medium">
+												<button type="button" aria-label="날짜 선택">01-01</button>
 											</div>
-											<p class="validate-text"></p>
 										</div>
+										<!-- //종료일 지정 체크 시 활성화 -->
 									</div>
 								</div>
 								<!-- 선택 시 활성화 -->
@@ -377,9 +376,9 @@
 										</label>
 										<div class="form">
 											<div class="label"></div>
-											<div class="input-wrap input-placeholder">
+											<div class="input-wrap input-placeholder input-medium">
 												<div class="visible-placeholder">매년</div>
-												<button type="button" class="text-button ac" data-placeholder="12월 첫째쭈 일요일"></button>
+												<button type="button" class="text-button ac" data-placeholder="12월 첫째주 일요일"></button>
 											</div>
 											<p class="validate-text"></p>
 										</div>
@@ -434,15 +433,22 @@
 						<!-- group-form -->
 						<div class="group-form">
 							<div class="group-title">
-								<strong class="title-medium">반복 설정</strong>
+								<strong class="title-medium">반복 범위</strong>
 							</div>
 							<div class="group-content">
 								<div class="inp-group py24 gap0">
 									<div class="inp inp-medium inp-combi">
-										<label>
+										<label style="flex:none;">
 											<input type="radio" name="rad003">
-											<span class="label-title">지정 안함</span>
+											<span class="label-title">종료일 지정</span>
 										</label>
+										<!-- 종료일 지정 체크 시 활성화 -->
+										<div class="form" style="flex:none;width:180px;">
+											<div class="input-wrap input-datepicker input-medium">
+												<button type="button" aria-label="날짜 선택">2024-01-01</button>
+											</div>
+										</div>
+										<!-- //종료일 지정 체크 시 활성화 -->
 									</div>
 									<div class="inp inp-medium inp-combi">
 										<label>
@@ -450,9 +456,9 @@
 											<span class="label-title">반복 횟수 지정</span>
 										</label>
 										<!-- 반복 횟수 지정 체크 시 활성화 -->
-										<div class="form">
+										<div class="form" style="width:140px;">
 											<div class="label"></div>
-											<div class="input-wrap input-placeholder">
+											<div class="input-wrap input-placeholder input-medium">
 												<input type="number" class="ac pr0" placeholder="1" aria-label="회">
 												<div class="visible-placeholder">회</div>
 											</div>
@@ -462,17 +468,10 @@
 									<div class="inp inp-medium inp-combi">
 										<label>
 											<input type="radio" name="rad003">
-											<span class="label-title">종료일 지정</span>
+											<span class="label-title">지정 안함</span>
 										</label>
-										<!-- 종료일 지정 체크 시 활성화 -->
-										<div class="form">
-											<div class="label"></div>
-											<strong class="title-medium ar px0 fw-500">2023-12-07</strong>
-										</div>
-										<!-- //종료일 지정 체크 시 활성화 -->
 									</div>
 									<!-- 종료일 지정 체크 시 활성화 -->
-
 									<div class="datepicker-wrap">
 										<div aria-label="날짜 선택" class="datepicker-trigger" id="datepicker"></div>
 									</div>
@@ -760,27 +759,6 @@
 		</div>
 	</div>
 	<!-- //micromodal -->
-
-	<script>
-		const inpCombiRadio = $('.inp-combi input[type="radio"]')
-
-		inpCombiRadio.on('change', function() {
-			const inpCombiRadioName = $(this).attr('name')
-			const inpCombi = $(this).closest('.inp-combi');
-			const inpCombiText = inpCombi.find('.input-wrap')
-
-			if ($(this).is(':checked')) {
-				const inpCombiSiblings = $(this).closest('.inp-combi').siblings('')
-				const inpCombiSiblingsText = inpCombiSiblings.find('.input-wrap')
-
-				if (inpCombiSiblings.find(`[name=${inpCombiRadioName}]`).length) {
-					inpCombiSiblingsText.removeClass('input-inner-text')
-				}
-				inpCombiText.addClass('input-inner-text')
-			}
-		})
-	</script>
-
 
 	<script>
 		$('.schedule-regist-trigger').on('click', function() {
