--- a/html/PBWCA/PBWCA010000_month.html
+++ b/html/PBWCA/PBWCA010000_month.html
@@ -675,6 +675,11 @@
 									<input type="radio" name="rad00_alarm" aria-label="3시간 전">
 								</label>
 							</div>
+							<div class="inp">
+								<label>
+									<input type="radio" name="rad00_alarm" aria-label="직접 설정">
+								</label>
+							</div>
 						</div>
 						<div class="schedule-regist-target p0 mt16" id="dp02" style="display:block;">
 							<div class="inp inp-toggle-text">
