--- a/html/PBWNO/PBWNO010000.html
+++ b/html/PBWNO/PBWNO010000.html
@@ -101,7 +101,12 @@
 						<div class="notice-content">
 							<ul class="file-attach-list">
 								<li><a href="#" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
-								<li><a href="#" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
+								<li><a href="#" data-ext="word" class="link"><span>불완전 판매사례 안내.word</span></a></li>
+								<li><a href="#" data-ext="excel" class="link"><span>불완전 판매사례 안내.excel</span></a></li>
+								<li><a href="#" data-ext="hwp" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
+								<li><a href="#" data-ext="img" class="link"><span>불완전 판매사례 안내.img</span></a></li>
+								<li><a href="#" data-ext="pdf" class="link"><span>불완전 판매사례 안내.pdf</span></a></li>
+								<li><a href="#" data-ext="ppt" class="link"><span>불완전 판매사례 안내.ppt</span></a></li>
 							</ul>
 							<picture>
 								<source srcset="/resources/@temp/thumb_w.png">
