--- a/html/PBWAI/PBWAI000000.html
+++ b/html/PBWAI/PBWAI000000.html
@@ -239,7 +239,12 @@
 											<p class="text">통화스왑업무개시</p>
 											<ul class="file-attach-list">
 												<li><a href="#" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
-												<li><a href="#" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
+												<li><a href="#" data-ext="word" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
+												<li><a href="#" data-ext="excel" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
+												<li><a href="#" data-ext="hwp" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
+												<li><a href="#" data-ext="img" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
+												<li><a href="#" data-ext="pdf" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
+												<li><a href="#" data-ext="ppt" class="link"><span>불완전 판매사례 안내.hwp</span></a></li>
 											</ul>
 										</li>
 										<li>
