--- a/html/PBWAI/PBWAI000000.html
+++ b/html/PBWAI/PBWAI000000.html
@@ -98,105 +98,54 @@
 						<div class="chatgroup">
 
 							<!-- Intro -->
-							<div class="chatbody chatbody-intro">
+							<div class="chatbody">
 								<div class="message-text left">
-									<div class="cha">
-										<picture>
-											<source srcset="/resources/images/PBWAI/message_intro.svg">
-											<img src="/resources/images/PBWAI/message_intro.svg" alt="">
-										</picture>
+									<div class="message-group">
+										<p class="text">우리은행 ChatGPT, AI 지식상담입니다. <br> 다음과 같이 구체적으로 물어보시면 도움되는 답변을 받으실 수 있어요</p>
+										<ol class="text">
+											<li>우리상품 바로알기에서 상품 정보와 근거 문서를 빠르게 찾아드립니다.</li>
+											<li>질문은 최대한 구체적으로 부탁드립니다.</li>
+										</ol>
 									</div>
-									<p class="text">우리은행 ChatGPT, AI 지식상담입니다. <br> 다음과 같이 구체적으로 물어보시면 도움되는 답변을 받으실 수 있어요</p>
 
 									<ul class="btn-link">
-										<li><button type="button" class="question-link">오늘의 주요 지수 알려줘</button></li>
-										<li><button type="button" class="question-link">3개월 기준 수익률 높은 펀드 알려줘</button></li>
+										<li><button type="button" class="question-link">1년 미만 근로자의 경우 개인형퇴직연금 가입시 필요한 서류는?</button></li>
 									</ul>
 
-									<p class="description caution body-small fc-typography-caption fw-400">고객의 개인정보, 직원정보, 행내한 자료 등이 외부로 유출되거나, 투자권유 등에 활용되지 않도록 유의하시기 바랍니다.</p>
-									<p class="description info body-small fc-typography-caption fw-400">이용 문의는 빅데이터플랫폼부(0000-0000)에 문의바랍니다.</p>
+									<div class="message-group">
+										<p class="description info body-small fc-typography-caption fw-400">생성형AI가 만든 답변은 부정확 할 수 있으니, 근거문서를 확인 후 활용해 주세요.</p>
+										<p class="description caution body-small fc-typography-caption fw-400">행내한 자료 등이 외부로 유출되거나, 투자권유등에 활용되지 않도록 유의하시기 바랍니다.</p>
+									</div>
 
 								</div>
 							</div>
 							<!-- //Intro -->
 
-
-							<!-- 공지사항 -->
-							<div class="chatbody chatbody-notice">
-								<div class="message-text left">
-									<div class="swiper mySwiper">
-										<div class="swiper-wrapper">
-											<div class="swiper-slide">
-												<div class="body-caption ar px4">2024.08.30</div>
-												<strong class="title-large mt2">환전주머니 환율 우대율이 변경 안내</strong>
-												<div class="comment-desc" data-toggle="toggle-wrap">
-													<div class="comment-desc-inner">
-														<p class="text" data-line="2">이곳에 내용이 들어갑니다</p>
-													</div>
-													<div class="comment-toggle-wrap">
-														<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
-															<span class="toggle-off">더보기</span>
-															<span class="toggle-on">접기</span>
-														</button>
-													</div>
-												</div>
-
-												<ul class="btn-link">
-													<li><button type="button" class="question-link">오늘의 주요 지수 알려줘</button></li>
-													<li><button type="button" class="question-link">3개월 기준 수익률 높은 펀드 알려줘기준 수익률 높은 펀드 알려줘</button></li>
-													<li><button type="button" class="question-link">3개월 기준 수익률 높은 펀드 알려줘기준 수익률 높은 펀드 알려줘</button></li>
-												</ul>
-											</div>
-											<div class="swiper-slide">
-												<div class="body-caption ar px4">2024.08.30</div>
-												<strong class="title-large mt2">환전주머니 환율 우대율이 변경 안내</strong>
-												<div class="comment-desc" data-toggle="toggle-wrap">
-													<div class="comment-desc-inner">
-														<p class="text" data-line="2">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
-													</div>
-													<div class="comment-toggle-wrap">
-														<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
-															<span class="toggle-off">더보기</span>
-															<span class="toggle-on">접기</span>
-														</button>
-													</div>
-												</div>
-
-												<ul class="btn-link">
-													<li><button type="button" class="question-link">오늘의 주요 지수 알려줘</button></li>
-													<li><button type="button" class="question-link">3개월 기준 수익률 높은 펀드 알려줘기준 수익률 높은 펀드 알려줘</button></li>
-													<li><button type="button" class="question-link">3개월 기준 수익률 높은 펀드 알려줘기준 수익률 높은 펀드 알려줘</button></li>
-												</ul>
-											</div>
-											<div class="swiper-slide">
-												<div class="body-caption ar px4">2024.08.30</div>
-												<strong class="title-large mt2">환전주머니 환율 우대율이 변경 안내</strong>
-												<div class="comment-desc" data-toggle="toggle-wrap">
-													<div class="comment-desc-inner">
-														<p class="text" data-line="2">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
-													</div>
-													<div class="comment-toggle-wrap">
-														<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
-															<span class="toggle-off">더보기</span>
-															<span class="toggle-on">접기</span>
-														</button>
-													</div>
-												</div>
-
-												<ul class="btn-link">
-													<li><button type="button" class="question-link">오늘의 주요 지수 알려줘</button></li>
-													<li><button type="button" class="question-link">3개월 기준 수익률 높은 펀드 알려줘기준 수익률 높은 펀드 알려줘</button></li>
-													<li><button type="button" class="question-link">3개월 기준 수익률 높은 펀드 알려줘기준 수익률 높은 펀드 알려줘</button></li>
-												</ul>
-											</div>
-										</div>
-										<div class="swiper-button-next"></div>
-										<div class="swiper-button-prev"></div>
-									</div>
-
+							<div class="chatbody">
+								<div class="message-text left anchor">
+									<button type="button" data-micromodal-trigger="modal-message01">
+										<strong class="fc-deepblue-600">자주하는 질문</strong><span>개인형퇴직연금 가입 시 긴 텍스트가 들어갈 경우</span>
+									</button>
+								</div>
+								<div class="message-text left anchor">
+									<button type="button" data-micromodal-trigger="modal-message02">
+										<strong class="fc-deepblue-600">자주하는 질문</strong><span>제목이 노출됩니다.</span>
+									</button>
+								</div>
+								<div class="message-text left anchor">
+									<button type="button" data-micromodal-trigger="modal-message03">
+										<strong class="fc-status-error">공지</strong><span>공지 제목이 노출됩니다.</span>
+									</button>
 								</div>
 							</div>
-							<!-- //공지사항 -->
+
+							<!-- 질문 -->
+							<div class="chatbody">
+								<div class="message-text right">
+									<p class="text">IRP 대리인 해지 가능해?</p>
+								</div>
+							</div>
+							<!-- //질문 -->
 
 							<!-- 답변1 -->
 							<div class="chatbody">
@@ -217,6 +166,9 @@
 													<i class="icon-only icon-20 icon-thumbsdown bg-icon-gray_1"></i>
 												</button>
 											</div>
+										</div>
+										<div class="right">
+											<button type="button" class="btn-xsmall btn-outlined btn-round">근거</button>
 										</div>
 									</div>
 								</div>
@@ -264,6 +216,14 @@
 							</div>
 							<!-- //답변1 -->
 
+
+							<!-- 질문 -->
+							<div class="chatbody">
+								<div class="message-text right">
+									<p class="text">자산관리플랫폼부 홍길동 과장 찾아줘</p>
+								</div>
+							</div>
+							<!-- //질문 -->
 
 							<!-- 답변2 -->
 							<div class="chatbody">
@@ -354,6 +314,9 @@
 												</button>
 											</div>
 										</div>
+										<div class="right">
+											<button type="button" class="btn-xsmall btn-outlined btn-round">근거</button>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -383,9 +346,11 @@
 
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
-			<div class="btn-wrap">
-				<div class="input-wrap"><input type="text" placeholder="궁금하신 사항을 질문하세요."></div>
-				<button type="button" class="btn-large btn-primary" id="btn-send-text" style="flex:0">확인</button>
+			<div class="btn-wrap a-end" style="box-shadow: 0px -2px 40px -1px rgba(12, 12, 13, 0.12);">
+				<div class="input-wrap input-chat-wrap">
+					<div contenteditable="true" class="textarea" data-placeholder="궁금하신 사항을 질문하세요."></div>
+				</div>
+				<button type="button" class="btn-small btn-primary btn-round" id="btn-send-text" style="flex:0">확인</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
@@ -394,6 +359,98 @@
 
 	</main>
 	<!-- //main -->
+
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-message01" aria-hidden="true">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large"></strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+
+					<div class="content">
+						<div class="message-notice">
+							<strong class="fc-deepblue-600">자주하는 질문</strong>
+							<h2 class="title-large px0 mb12">개인형퇴직연금 가입 시 자주하는 질문 모음</h2>
+							<p class="body-small fc-typography-gray mb16">효과적인 의사소통을 위한 비언어적 신호에는 몸짓, 표정, 제스처의 중요성이 있습니다. 몸짓은 말을 보완하며 메시지를 강화하는 역할을 합니다. 표정은 감정을 전달하고 상대방과의 공감을 형성하는 데 중요한 요소입니다.</p>
+							<ul class="btn-link">
+								<li><button type="button" class="question-link">1년 미만 근로자의 경우 개인형퇴직연금 가입시 필요한 서류는?</button></li>
+								<li><button type="button" class="question-link">질문 내용이 노출됩니다</button></li>
+								<li><button type="button" class="question-link">질문 내용이 노출됩니다</button></li>
+							</ul>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-message02" aria-hidden="true">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large"></strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+
+					<div class="content">
+						<div class="message-notice">
+							<strong class="fc-status-error">공지</strong>
+							<h2 class="title-large px0 mb12">공지사항 제목이 노출됩니다.</h2>
+							<p class="body-small fc-typography-gray mb16">효과적인 의사소통을 위한 비언어적 신호에는 몸짓, 표정, 제스처의 중요성이 있습니다. 몸짓은 말을 보완하며 메시지를 강화하는 역할을 합니다. 표정은 감정을 전달하고 상대방과의 공감을 형성하는 데 중요한 요소입니다.</p>
+							<ul class="btn-link">
+								<li><button type="button" class="question-link">1년 미만 근로자의 경우 개인형퇴직연금 가입시 필요한 서류는?</button></li>
+								<li><button type="button" class="question-link">질문 내용이 노출됩니다</button></li>
+								<li><button type="button" class="question-link">질문 내용이 노출됩니다</button></li>
+							</ul>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-message03" aria-hidden="true">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large"></strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+
+					<div class="content">
+						<div class="message-notice">
+							<strong class="fc-status-error">공지</strong>
+							<h2 class="title-large px0 mb12">공지사항 제목이 노출됩니다.</h2>
+							<p class="body-small fc-typography-gray mb16">효과적인 의사소통을 위한 비언어적 신호에는 몸짓, 표정, 제스처의 중요성이 있습니다. 몸짓은 말을 보완하며 메시지를 강화하는 역할을 합니다. 표정은 감정을 전달하고 상대방과의 공감을 형성하는 데 중요한 요소입니다.</p>
+							<ul class="btn-link">
+								<li><button type="button" class="question-link">1년 미만 근로자의 경우 개인형퇴직연금 가입시 필요한 서류는?</button></li>
+								<li><button type="button" class="question-link">질문 내용이 노출됩니다</button></li>
+								<li><button type="button" class="question-link">질문 내용이 노출됩니다</button></li>
+							</ul>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
 
 
 	<script>
@@ -409,10 +466,11 @@
 
 		$('#btn-send-text').click(function() {
 			// $('.input-wrap input').focus()
-			var inputText = $('.input-wrap input').val();
+			var inputText = $('.input-wrap .textarea').text();
+			console.dir(inputText)
 			$('.chatgroup .chatbody:last').after('<div class="chatbody"><div class="message-text right"><p class="text" data-line="2">' + inputText + '</p></div></div>')
 			scrollBottom();
-			$('.input-wrap input').val('')
+			$('.input-wrap .textarea').text('')
 		})
 		// scroll page bottom animation 100%
 		var scrollBottom = function() {
@@ -441,6 +499,21 @@
 				items.style.display = 'none'
 			}
 		})
+	</script>
+
+	<script>
+		toastrCont.init();
+		toastr.caution(``, 'AI답변은 부정확할 수 있으니, 근거 확인 후 활용해 주세요.', {
+			"extendedTimeOut": 0,
+			"preventDuplicates": false,
+			"disableTimeOut": true,
+		});
+	</script>
+
+	<script>
+		$(document).on('keyup input', '.textarea', function() {
+			$(this).find('*').removeAttr('style');
+		});
 	</script>
 
 </body>
