--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -1054,7 +1054,11 @@
 						<div class="group-form mt40">
 							<div class="group-title">
 								<strong class="title-medium">자격증<i class="apos" aria-label="필수 입력">*</i></strong>
-								<!-- <p class="description info body-small fc-typography-caption">최대 <span class="fc-status-error">N</span>개 선택할 수 있습니다.</p> 삭제됨 2024-12-13 -->
+								<div class="inp inp-toggle">
+									<label>
+										<input type="checkbox" checked aria-label="자격증 노출">
+									</label>
+								</div>
 							</div>
 							<div class="group-content">
 								<div class="inp-column-list">
@@ -1085,6 +1089,54 @@
 									<div class="inp inp-medium">
 										<label>
 											<input type="checkbox">
+											<span class="label-title">CDCS(국제공인신용장전문가자격증)</span>
+										</label>
+									</div>
+								</div>
+								<p class="description caution body-small fc-typography-caption">지점 주소와 전화번호는 우리금융 Portal Service &gt; 직원조회에서 본인이 속한 부점명으로 검색해 수정할 수 있습니다.</p>
+							</div>
+						</div>
+						<!-- //group -->
+
+						<!-- group -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">자격증<i class="apos" aria-label="필수 입력">*</i></strong>
+								<div class="inp inp-toggle">
+									<label>
+										<input type="checkbox" aria-label="자격증 노출">
+									</label>
+								</div>
+							</div>
+							<div class="group-content">
+								<div class="inp-column-list">
+									<div class="inp inp-medium">
+										<label>
+											<input type="checkbox" checked disabled>
+											<span class="label-title">선택안함</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="checkbox" disabled>
+											<span class="label-title">신용위험분석사(CRA)1차</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="checkbox" disabled>
+											<span class="label-title">공인신용분석사</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="checkbox" disabled>
+											<span class="label-title">CFP(국제공인재무설계사)</span>
+										</label>
+									</div>
+									<div class="inp inp-medium">
+										<label>
+											<input type="checkbox" disabled>
 											<span class="label-title">CDCS(국제공인신용장전문가자격증)</span>
 										</label>
 									</div>
