--- a/html/PBWFU/PBWFU040000.html
+++ b/html/PBWFU/PBWFU040000.html
@@ -236,7 +236,7 @@
 						<div class="stroke stroke4 stroke-fluid"></div>
 
 						<div class="fund-detail-info content-fluid">
-							<h4 class="headline-small">수익률 추이</h4>
+							<h4 class="headline-small">누적 수익률</h4>
 							<!-- tab-content -->
 							<div class="tab-content">
 								<ul class="tab-list tab-button" role="tablist">
@@ -247,12 +247,12 @@
 								</ul>
 							</div>
 							<!-- //tab-content -->
-							<div class="fund-rate mt24">
+							<!-- <div class="fund-rate mt24">
 								<h5 class="headline-small"><span>3개월 수익률</span><strong class="rise">+ 888.88%</strong></h5>
 								<h5 class="headline-small"><span>3개월 수익률</span><strong class="fall">- 888.88%</strong></h5>
 								<h5 class="headline-small"><span>3개월 수익률</span><strong class="steady">0.00%</strong></h5>
-							</div>
-							<div class="chart-wrap mt16">
+							</div> -->
+							<div class="chart-wrap mt24">
 								<div style="height:180px;">
 									<div id="chart2" data-aos data-aos-id="chart2"></div>
 								</div>
