--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -485,8 +485,13 @@
 				<div class="modal__content">
 
 					<div class="content">
-						<strong class="title-medium">이곳에 공지사항의 제목이 들어갑니다.</strong>
-						<p class="fs-18 fw-400 px4 mt10">공지내용입니다. <br> 우리은행 PB영업지원 APP이 오픈되었습니다. 업무에 많은 도움이 되길 바랍니다. 공지내용입니다.</p>
+						<div class="message-notice">
+							<strong class="fc-status-error">공지</strong>
+							<h2 class="title-large px0 mb12">RM WON이 RM과 PB가 모두 편리한 앱으로 확대 개편됩니다!</h2>
+							<p class="body-small fc-typography-gray">자산관리 전문인력 여러분을 위한 새로운 앱이 오픈하였습니다. <br><br>
+								효율적인 고객관리와 영업활동을 지원하는 다양한 기능을 제공하여 자산관리 역량과 영업력을 강화하는데 중요한 역할을 할 것입니다.
+								업무에 많은 활용 부탁드리겠습니다.</p>
+						</div>
 
 					</div>
 
