--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -1053,21 +1053,16 @@
 						<!-- group -->
 						<div class="group-form mt40">
 							<div class="group-title">
-								<strong class="title-medium">자격증<i class="apos" aria-label="필수 입력">*</i></strong>
-								<div class="inp inp-toggle">
+								<strong class="title-medium">자격증</strong>
+								<div class="inp inp-toggle mx16">
 									<label>
 										<input type="checkbox" checked aria-label="자격증 노출">
 									</label>
 								</div>
 							</div>
 							<div class="group-content">
-								<div class="inp-column-list">
-									<div class="inp inp-medium">
-										<label>
-											<input type="checkbox">
-											<span class="label-title">선택안함</span>
-										</label>
-									</div>
+								<p class="description info body-small fc-typography-caption mt24">최대 5개 선택할 수 있습니다.</p>
+								<div class="inp-column-list form">
 									<div class="inp inp-medium">
 										<label>
 											<input type="checkbox">
@@ -1101,15 +1096,16 @@
 						<!-- group -->
 						<div class="group-form mt40">
 							<div class="group-title">
-								<strong class="title-medium">자격증<i class="apos" aria-label="필수 입력">*</i></strong>
-								<div class="inp inp-toggle">
+								<strong class="title-medium">자격증</strong>
+								<div class="inp inp-toggle mx16">
 									<label>
 										<input type="checkbox" aria-label="자격증 노출">
 									</label>
 								</div>
 							</div>
 							<div class="group-content">
-								<div class="inp-column-list">
+								<p class="description info body-small fc-typography-caption mt24">최대 5개 선택할 수 있습니다.</p>
+								<div class="inp-column-list form form-invalid">
 									<div class="inp inp-medium">
 										<label>
 											<input type="checkbox" checked disabled>
@@ -1140,6 +1136,27 @@
 											<span class="label-title">CDCS(국제공인신용장전문가자격증)</span>
 										</label>
 									</div>
+									<p class="validate-text">1개 이상 선택해 주세요.</p>
+								</div>
+								<p class="description caution body-small fc-typography-caption">지점 주소와 전화번호는 우리금융 Portal Service &gt; 직원조회에서 본인이 속한 부점명으로 검색해 수정할 수 있습니다.</p>
+							</div>
+						</div>
+						<!-- //group -->
+
+
+						<!-- group -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">자격증</strong>
+								<div class="inp inp-toggle mx16">
+									<label>
+										<input type="checkbox" aria-label="자격증 노출">
+									</label>
+								</div>
+							</div>
+							<div class="group-content">
+								<div class="py24">
+									<p class="description caution body-small fc-typography-caption ac my12">자격증 정보가 없습니다.</p>
 								</div>
 								<p class="description caution body-small fc-typography-caption">지점 주소와 전화번호는 우리금융 Portal Service &gt; 직원조회에서 본인이 속한 부점명으로 검색해 수정할 수 있습니다.</p>
 							</div>
