--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -116,12 +116,12 @@
 
 						<div class="main-schedule-week">
 							<ul>
-								<li class="weekend">
+								<li class="weekend today is-schedule is-active">
 									<a href="#" class="date">
 										<div class="text">13</div>
 									</a>
 								</li>
-								<li class="is-schedule is-active">
+								<li class="is-schedule ">
 									<a href="#" class="date">
 										<div class="text">14</div>
 										<div class="schedule-wrap">
