--- a/html/PBWCA/PBWCA010000_month.html
+++ b/html/PBWCA/PBWCA010000_month.html
@@ -649,7 +649,7 @@
 				</div>
 				<div class="modal__content modal__content__alert">
 					<div class="content">
-						<div class="inp-round flex-wrap">
+						<div class="inp-round flex-wrap px4">
 							<div class="inp">
 								<label>
 									<input type="radio" name="rad00_alarm" aria-label="없음">
@@ -681,7 +681,7 @@
 								</label>
 							</div>
 						</div>
-						<div class="schedule-regist-target p0 mt16" id="dp02" style="display:block;">
+						<div class="schedule-regist-target px4 py8 mt24" id="dp02" style="display:block;">
 							<div class="inp inp-toggle-text">
 								<input type="radio" name="dp02" aria-label="오전" checked>
 								<input type="radio" name="dp02" aria-label="오후">
@@ -698,7 +698,14 @@
 								</div>
 							</div>
 						</div>
-						<p class="description caution body-small fc-typography-caption fs14 mt16">APP에서 등록한 일정의 알림은 APP에서만 발송됩니다</p>
+						<div class="bg-surface-surface50 mt24 px8 py10 br8">
+							<p class="description caution body-small fc-typography-caption fs14">반복일정을 설정한 Push 알림은 최대 2년까지 발송되며, 이후의 반복일정은 Push 알림 재설정이 필요합니다.</p>
+						</div>
+						<div class="px8 mt12">
+							<p class="description caution body-small fc-typography-caption fs14">APP에서만 Push 알림을 설정할 수 있습니다.</p>
+							<p class="description caution body-small fc-typography-caption fs14 mt10">Push 알림을 설정한 일정은 포털에서 시작일을 수정하거나 일정을 삭제 시, 처음에 설정한 Push알림이 그대로 발송되니, APP에서 일정을 수정하거나 삭제해 주세요.</p>
+						</div>
+
 					</div>
 				</div>
 				<div class="modal__footer">
