--- a/html/PBWIV/PBWIV070000.html
+++ b/html/PBWIV/PBWIV070000.html
@@ -116,7 +116,7 @@
 											<dd>
 												<strong>9,999.99</strong>
 												<div class="stock rise" aria-label="등락폭(상승)">00.00</div>
-												<div class="tags tags-small tags-red-100" aria-label="등락율">+00.00</div>
+												<div class="tags tags-small tags-lightRed" aria-label="등락율">+00.00</div>
 											</dd>
 										</dl>
 									</a>
@@ -131,7 +131,7 @@
 											<dd>
 												<strong>9,999.99</strong>
 												<div class="stock fall" aria-label="등락폭(하락)">100.00</div>
-												<div class="tags tags-small tags-deepBlue" aria-label="등락율">-00.00</div>
+												<div class="tags tags-small tags-lightBlue" aria-label="등락율">-00.00</div>
 											</dd>
 										</dl>
 									</a>
