--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -268,7 +268,7 @@
 												<div class="stock rise" aria-label="등락폭(상승)">888.88</div>
 											</dd>
 											<dd>
-												<div class="tags tags-small tags-red-100" aria-label="등락율">+99.99%</div>
+												<div class="tags tags-small tags-lightRed" aria-label="등락율">+99.99%</div>
 											</dd>
 										</dl>
 									</a>
@@ -282,7 +282,7 @@
 												<div class="stock fall" aria-label="등락폭(하락)">888.88</div>
 											</dd>
 											<dd>
-												<div class="tags tags-small tags-deepBlue" aria-label="등락율">-00.00</div>
+												<div class="tags tags-small tags-lightBlue" aria-label="등락율">-00.00</div>
 											</dd>
 										</dl>
 									</a>
@@ -435,31 +435,31 @@
 				<ul>
 					<li class="list01">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav01 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>펀드</strong>
 						</a>
 					</li>
 					<li class="list02">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav02 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>투자정보</strong>
 						</a>
 					</li>
 					<li class="list03 is-current">
 						<a href="#" aria-current="page">
-							<div class="icon"><i class="icon-only icon-32 icon-nav03 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>홈</strong>
 						</a>
 					</li>
 					<li class="list04">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav04 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>금융+</strong>
 						</a>
 					</li>
 					<li class="list05 not-read" aria-label="알림 있음">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav05 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>알림</strong>
 						</a>
 					</li>
