--- a/html/PBWMA/PBWMA020000.html
+++ b/html/PBWMA/PBWMA020000.html
@@ -118,7 +118,7 @@
 												<div class="stock rise" aria-label="등락폭(상승)">888.88</div>
 											</dd>
 											<dd>
-												<div class="tags tags-small tags-red-100" aria-label="등락율">+99.99%</div>
+												<div class="tags tags-small tags-lightRed" aria-label="등락율">+99.99%</div>
 											</dd>
 										</dl>
 									</a>
@@ -132,7 +132,7 @@
 												<div class="stock fall" aria-label="등락폭(하락)">888.88</div>
 											</dd>
 											<dd>
-												<div class="tags tags-small tags-deepBlue" aria-label="등락율">-00.00</div>
+												<div class="tags tags-small tags-lightBlue" aria-label="등락율">-00.00</div>
 											</dd>
 										</dl>
 									</a>
