--- a/html/PBWIV/PBWIV010000.html
+++ b/html/PBWIV/PBWIV010000.html
@@ -123,7 +123,7 @@
 												<div class="stock rise" aria-label="등락폭(상승)">888.88</div>
 											</dd>
 											<dd>
-												<div class="tags tags-small tags-red-100" aria-label="등락율">+99.99%</div>
+												<div class="tags tags-small tags-lightRed" aria-label="등락율">+99.99%</div>
 											</dd>
 										</dl>
 									</a>
@@ -137,7 +137,7 @@
 												<div class="stock fall" aria-label="등락폭(하락)">888.88</div>
 											</dd>
 											<dd>
-												<div class="tags tags-small tags-deepBlue" aria-label="등락율">-00.00</div>
+												<div class="tags tags-small tags-lightBlue" aria-label="등락율">-00.00</div>
 											</dd>
 										</dl>
 									</a>
@@ -169,7 +169,7 @@
 										</dl>
 										<div>
 											<div class="stock rise" aria-label="등락폭(상승)">00.00</div>
-											<div class="tags tags-small tags-red-100" aria-label="등락율">+00.00</div>
+											<div class="tags tags-small tags-lightRed" aria-label="등락율">+00.00</div>
 										</div>
 									</a>
 								</li>
@@ -181,7 +181,7 @@
 										</dl>
 										<div>
 											<div class="stock fall" aria-label="등락폭(하락)">100.00</div>
-											<div class="tags tags-small tags-deepBlue" aria-label="등락율">-00.00</div>
+											<div class="tags tags-small tags-lightBlue" aria-label="등락율">-00.00</div>
 										</div>
 									</a>
 								</li>
