--- a/html/PBWIV/PBWIV010001.html
+++ b/html/PBWIV/PBWIV010001.html
@@ -105,8 +105,8 @@
 									<!-- <div class="stock fall" aria-label="등락폭(하락)">888.88</div> -->
 									<!-- <div class="stock steady" aria-label="등락폭(보합)">00.00</div> -->
 
-									<div class="tags tags-small tags-red-100" aria-label="등락율">+99.99%</div>
-									<!-- <div class="tags tags-small tags-deepBlue" aria-label="등락율">-00.00</div> -->
+									<div class="tags tags-small tags-lightRed" aria-label="등락율">+99.99%</div>
+									<!-- <div class="tags tags-small tags-lightBlue" aria-label="등락율">-00.00</div> -->
 									<!-- <div class="tags tags-small tags-lightGray" aria-label="등락율">00.00</div> -->
 								</dd>
 							</dl>
@@ -144,8 +144,8 @@
 										<!-- <div class="stock fall" aria-label="등락폭(하락)">888.88</div> -->
 										<!-- <div class="stock steady" aria-label="등락폭(보합)">00.00</div> -->
 
-										<div class="tags tags-small tags-red-100" aria-label="등락율">+99.99%</div>
-										<!-- <div class="tags tags-small tags-deepBlue" aria-label="등락율">-00.00</div> -->
+										<div class="tags tags-small tags-lightRed" aria-label="등락율">+99.99%</div>
+										<!-- <div class="tags tags-small tags-lightBlue" aria-label="등락율">-00.00</div> -->
 										<!-- <div class="tags tags-small tags-lightGray" aria-label="등락율">00.00</div> -->
 									</dd>
 								</dl>
@@ -229,7 +229,7 @@
 										<th scope="row">
 											<div class="d-flex a-center gap2">
 												<div>2023-11-10</div>
-												<div class="tags tags-small tags-red-100" aria-label="등락율">기간최고</div>
+												<div class="tags tags-small tags-lightRed" aria-label="등락율">기간최고</div>
 											</div>
 										</th>
 										<td>9999.99</td>
@@ -241,7 +241,7 @@
 										<th scope="row">
 											<div class="d-flex a-center gap2">
 												<div>2023-11-09</div>
-												<div class="tags tags-small tags-deepBlue" aria-label="등락율">기간최저</div>
+												<div class="tags tags-small tags-lightBlue" aria-label="등락율">기간최저</div>
 											</div>
 										</th>
 										<td>9999.99</td>
