--- a/html/PBWIV/PBWIV040000.html
+++ b/html/PBWIV/PBWIV040000.html
@@ -115,7 +115,7 @@
 											<dd>
 												<strong>9,999.99</strong>
 												<div class="stock rise" aria-label="등락폭(상승)">00.00</div>
-												<div class="tags tags-small tags-red-100" aria-label="등락율">+00.00</div>
+												<div class="tags tags-small tags-lightRed" aria-label="등락율">+00.00</div>
 											</dd>
 										</dl>
 									</a>
@@ -127,7 +127,7 @@
 											<dd>
 												<strong>9,999.99</strong>
 												<div class="stock fall" aria-label="등락폭(하락)">100.00</div>
-												<div class="tags tags-small tags-deepBlue" aria-label="등락율">-00.00</div>
+												<div class="tags tags-small tags-lightBlue" aria-label="등락율">-00.00</div>
 											</dd>
 										</dl>
 									</a>
@@ -159,7 +159,7 @@
 											<dd>
 												<strong>9,999.99</strong>
 												<div class="stock rise" aria-label="등락폭(상승)">00.00</div>
-												<div class="tags tags-small tags-red-100" aria-label="등락율">+00.00</div>
+												<div class="tags tags-small tags-lightRed" aria-label="등락율">+00.00</div>
 											</dd>
 										</dl>
 									</a>
@@ -171,7 +171,7 @@
 											<dd>
 												<strong>9,999.99</strong>
 												<div class="stock fall" aria-label="등락폭(하락)">100.00</div>
-												<div class="tags tags-small tags-deepBlue" aria-label="등락율">-00.00</div>
+												<div class="tags tags-small tags-lightBlue" aria-label="등락율">-00.00</div>
 											</dd>
 										</dl>
 									</a>
