--- a/html/PBWMA/PBWMA000000_skeletone.html
+++ b/html/PBWMA/PBWMA000000_skeletone.html
@@ -269,31 +269,31 @@
 				<ul>
 					<li class="list01">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav01 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>펀드</strong>
 						</a>
 					</li>
 					<li class="list02">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav02 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>투자정보</strong>
 						</a>
 					</li>
 					<li class="list03 is-current">
 						<a href="#" aria-current="page">
-							<div class="icon"><i class="icon-only icon-32 icon-nav03 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>홈</strong>
 						</a>
 					</li>
 					<li class="list04">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav04 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>금융+</strong>
 						</a>
 					</li>
 					<li class="list05 not-read" aria-label="알림 있음">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav05 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>알림</strong>
 						</a>
 					</li>
@@ -353,16 +353,16 @@
 				el: ".swiper-pagination",
 			}
 		});
-		MicroModal.show('modal-notice');
+		// MicroModal.show('modal-notice');
 	</script>
 
-
+	<!-- 
 	<script>
 		$('.content').addClass('loading')
 		setTimeout(function() {
 			$('.content').removeClass('loading')
 		}, 3000)
-	</script>
+	</script> -->
 </body>
 
 </html>
