--- a/html/PBWIV/PBWIV100000.html
+++ b/html/PBWIV/PBWIV100000.html
@@ -120,7 +120,7 @@
 								<li>
 									<button type="button" data-micromodal-trigger="modal-news-content">
 										<span class="financial-news-title">
-											<span class="media">연합뉴스</span>
+											<span class="media"><i class="media01"></i>연합뉴스</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
 										<span class="date">2024-10-15 14:43</span>
@@ -129,7 +129,7 @@
 								<li>
 									<button type="button">
 										<span class="financial-news-title">
-											<span class="media">매체 이름이 길어질 경우에는 이렇게 노출됩니다</span>
+											<span class="media"><i class="mediaetc"></i>매체 이름이 길어질 경우에는 이렇게 노출됩니다</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">[속보] ‘겁나게 오르는’ 환율, 1480원선도 뚫었다…금융위기來 최고 수준[속보] ‘겁나게 오르는’ 환율, 1480원선도 뚫었다…금융위기來 최고 수준</strong>
 										<span class="date">2024-10-15 14:43</span>
@@ -138,7 +138,7 @@
 								<li>
 									<button type="button">
 										<span class="financial-news-title">
-											<span class="media">연합뉴스</span>
+											<span class="media"><i class="media02"></i>매일경제</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
 										<span class="date">2024-10-15 14:43</span>
@@ -147,7 +147,16 @@
 								<li>
 									<button type="button">
 										<span class="financial-news-title">
-											<span class="media">연합뉴스</span>
+											<span class="media"><i class="media03"></i>한국경제</span>
+										</span>
+										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
+										<span class="date">2024-10-15 14:43</span>
+									</button>
+								</li>
+								<li>
+									<button type="button">
+										<span class="financial-news-title">
+											<span class="media"><i class="media04"></i>이데일리</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
 										<span class="date">2024-10-15 14:43</span>
