--- a/html/PBWIV/PBWIV120000.html
+++ b/html/PBWIV/PBWIV120000.html
@@ -120,7 +120,7 @@
 								<li>
 									<button type="button" data-micromodal-trigger="modal-news-content">
 										<span class="financial-news-title">
-											<span class="media">연합뉴스</span>
+											<span class="media"><i class="media01"></i>연합뉴스</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
 										<span class="date">2024-10-15 14:43</span>
@@ -135,7 +135,7 @@
 								<li>
 									<button type="button">
 										<span class="financial-news-title">
-											<span class="media">매체 이름이 길어질 경우에는 이렇게 노출됩니다</span>
+											<span class="media"><i class="mediaetc"></i>매체 이름이 길어질 경우에는 이렇게 노출됩니다</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">[속보] ‘겁나게 오르는’ 환율, 1480원선도 뚫었다…금융위기來 최고 수준[속보] ‘겁나게 오르는’ 환율, 1480원선도 뚫었다…금융위기來 최고 수준</strong>
 										<span class="date">2024-10-15 14:43</span>
@@ -150,7 +150,7 @@
 								<li>
 									<button type="button">
 										<span class="financial-news-title">
-											<span class="media">연합뉴스</span>
+											<span class="media"><i class="media01"></i>연합뉴스</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
 										<span class="date">2024-10-15 14:43</span>
@@ -165,7 +165,7 @@
 								<li>
 									<button type="button">
 										<span class="financial-news-title">
-											<span class="media">연합뉴스</span>
+											<span class="media"><i class="media01"></i>연합뉴스</span>
 										</span>
 										<strong class="title-large ellipsis" data-ellipsis="2">뉴스 제목이 노출됩니다.</strong>
 										<span class="date">2024-10-15 14:43</span>
@@ -335,7 +335,7 @@
 
 						<article class="news-article pt16">
 							<div class="news-article-title">
-								<div class="tags tags-large tags-cyan">레이블</div>
+								<div class="tags tags-large tags-lightCyan">레이블</div>
 								<div class="media">연합뉴스</div>
 							</div>
 							<h2 class="headline-medium">[속보] ‘겁나게 오르는’ 환율, 1480원선도 뚫었다…금융위기來 최고 수준</h2>
