--- a/html/PBWCA/PBWCA000000.html
+++ b/html/PBWCA/PBWCA000000.html
@@ -220,6 +220,8 @@
 								</div>
 							</div>
 						</a>
+
+						<p class="description ac my12 fc-typography-caption fs-15">오늘은 일정이 없습니다.</p>
 					</div>
 					<!-- //schedule-section -->
 
