--- a/html/PBWFI/PBWFI040000.html
+++ b/html/PBWFI/PBWFI040000.html
@@ -325,7 +325,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close><i class="ico-check"></i>저장</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close><i class="ico-check"></i>확인</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
