--- a/html/PBWCL/PBWCL000000.html
+++ b/html/PBWCL/PBWCL000000.html
@@ -231,7 +231,7 @@
 
 
 						<!-- division-center -->
-						<div class="division-center content-fluid bg-background-bg_lightGray px16 py40">
+						<div class="division-center content-fluid bg-background-bg_lightGray px16 py40 mt16">
 
 							<!-- customer-card-list -->
 							<div class="customer-card-list">
@@ -293,7 +293,7 @@
 
 
 						<!-- division-center -->
-						<div class="division-center content-fluid bg-background-bg_lightGray">
+						<div class="division-center content-fluid bg-background-bg_lightGray mt16">
 
 							<div class="no-result">
 								<i class="icon-only icon-48 icon-noresult bg-icon-gray_1"></i>
