--- a/html/PBWFU/PBWFU000000.html
+++ b/html/PBWFU/PBWFU000000.html
@@ -208,7 +208,7 @@
 
 					<!-- figure-list -->
 					<div class="figure-list py16">
-						<ul>
+						<ul class="flex-wrap">
 							<li>
 								<a href="#">
 									<figure>
