--- a/html/PBWMA/PBWMA000000.html
+++ b/html/PBWMA/PBWMA000000.html
@@ -341,7 +341,7 @@
 							<strong class="title-large">펀드 동향</strong>
 						</div>
 						<div class="main-figure-list">
-							<ul>
+							<ul class="flex-wrap">
 								<li>
 									<figure>
 										<picture>
