--- a/html/PBWMA/PBWMA010000_skeletone.html
+++ b/html/PBWMA/PBWMA010000_skeletone.html
@@ -168,31 +168,31 @@
 				<ul>
 					<li class="list01 is-current">
 						<a href="#" aria-current="page">
-							<div class="icon"><i class="icon-only icon-32 icon-nav01 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>펀드</strong>
 						</a>
 					</li>
 					<li class="list02">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav02 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>투자정보</strong>
 						</a>
 					</li>
 					<li class="list03">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav03 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>홈</strong>
 						</a>
 					</li>
 					<li class="list04">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav04 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>금융+</strong>
 						</a>
 					</li>
 					<li class="list05">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav05 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>알림</strong>
 						</a>
 					</li>
