--- a/html/PBWMA/PBWMA040000.html
+++ b/html/PBWMA/PBWMA040000.html
@@ -101,7 +101,7 @@
 							<strong class="headline-small">스마트한 업무 지원!</strong>
 						</div>
 						<div class="main-figure-list">
-							<ul>
+							<ul class="flex-wrap">
 								<li>
 									<figure>
 										<picture>
@@ -320,31 +320,31 @@
 				<ul>
 					<li class="list01">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav01 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>펀드</strong>
 						</a>
 					</li>
 					<li class="list02">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav02 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>투자정보</strong>
 						</a>
 					</li>
 					<li class="list03">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav03 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>홈</strong>
 						</a>
 					</li>
 					<li class="list04 is-current">
 						<a href="#" aria-current="page">
-							<div class="icon"><i class="icon-only icon-32 icon-nav04 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>금융+</strong>
 						</a>
 					</li>
 					<li class="list05">
 						<a href="#">
-							<div class="icon"><i class="icon-only icon-32 icon-nav05 bg-icon-gray_1"></i></div>
+							<div class="icon"></div>
 							<strong>알림</strong>
 						</a>
 					</li>
