--- a/html/PBWFU/PBWFU040000.html
+++ b/html/PBWFU/PBWFU040000.html
@@ -197,14 +197,18 @@
 								</div>
 							</div>
 							<ul>
-								<li class="fc-blue-500">1. 국내주식 : #2589F4
+								<li class="fc-blue-500">1 : #2589F4
 								<li>
-								<li class="fc-deepblue-700">2. 해외주식 : #1641D0</li>
-								<li class="fc-pink-400">3. 국내채권 : #F35E9C</li>
-								<li class="fc-purple-500">4. 해외채권 : #B348E5</li>
-								<li class="fc-violet-400">5. 펀드 : #7163EE</li>
-								<li class="fc-cyan-500">6. 유동성 : #1AA3C1</li>
-								<li class="fc-green-700">7. 기타 : #048B65</li>
+								<li class="fc-deepblue-700">2 : #1641D0</li>
+								<li class="fc-pink-400">3 : #F35E9C</li>
+								<li class="fc-purple-500">4 : #B348E5</li>
+								<li class="fc-violet-400">5 : #7163EE</li>
+								<li class="fc-cyan-500">6 : #1AA3C1</li>
+								<li class="fc-green-700">7 : #048B65</li>
+								<li class="fc-yellow-400">8 : #FFD138</li>
+								<li class="fc-red-300">9 : #F68486</li>
+								<li class="fc-red-700">10 : #CC1E24</li>
+
 							</ul>
 						</div>
 
