--- a/html/PBWIV/PBWIV010001.html
+++ b/html/PBWIV/PBWIV010001.html
@@ -95,6 +95,7 @@
 						}
 					</style>
 
+					<div class="body-caption px4 ar mt16">2024-10-15 기준</div>
 					<div class="stock-detail">
 						<div class="stock-detail-title">
 							<dl>
